--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    transition: 0.5s;
 }
 
 body{
@@ -20,8 +21,6 @@ body{
     color: white !important;
 }
 
-
-
 .navbar .username{
     border-radius: 50%;
     height: 50px;
@@ -31,6 +30,40 @@ body{
     justify-content: center;
     align-items: center;
     cursor: pointer;
+    position: relative;
+    
+}
+.navbar .username:hover .usermenu{
+    display: block;    
+}
+
+.navbar .username .usermenu{
+    width: 240px;
+    background-color: aliceblue;
+    position: absolute;
+    top: 3rem;
+    right: 0rem;
+    cursor: pointer;
+    z-index: 9;
+    border-radius: 0.3rem;
+    box-shadow: 0px 3px 5px 0px rgba(0, 0, 0, 30%);
+    overflow: hidden;
+    display: none;
+
+}
+
+.navbar .username .usermenu a{
+    display: block;
+    text-decoration: none;
+    border-bottom: 1px solid #00007c;
+    padding: 1rem;
+    color: #00007c;
+
+}
+.navbar .username .usermenu a:hover{
+    color: black;
+    background-color: lightgray;
+
 }
 
 .navbar .username i{
